# cosmic-ext-window-helper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hatch_build.py  pyproject.toml
cosmic_ext_window_helper/: __init__.py  __main__.py  cli.py  conf.py  exceptions.py  protocols.json
cosmic_ext_window_helper/wayland/: package.py  proxy.py
