[project]
name = "cosmic-ext-window-helper"
authors = [
    {name = "Pierre 'La Pause' Guillaume", email = "pierre@guillaume.email"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
   "Development Status :: 4 - Beta",
   "Environment :: Console",
   "Intended Audience :: Developers",
   "Intended Audience :: End Users/Desktop",
   "Natural Language :: English",
   "Operating System :: POSIX :: Linux",
   "Programming Language :: Python",
   "Topic :: Desktop Environment",
   "Topic :: Desktop Environment :: Window Managers"
]
readme = "README.md"
dynamic = ["version", "description"]

requires-python = ">=3.10"
dependencies = ["python-wayland==1.0.0", "modshim", "parsimonious"]

[project.optional-dependencies]
dev = ["lxml", "textual"]

[project.scripts]
cosmic-ext-window-helper = "cosmic_ext_window_helper.cli:main"

[project.urls]
Homepage = "https://github.com/lapause/cosmic-ext-window-helper"
Repository = "https://github.com/lapause/cosmic-ext-window-helper.git"
Issues = "https://github.com/lapause/cosmic-ext-window-helper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.hooks.custom.path = "hatch_build.py"
envs.dev.features = ["dev"]
build.targets.sdist.exclude = ["/.vscode"]

[tool.ruff]
line-length = 120

# Rules: https://beta.ruff.rs/docs/rules
lint.select = [
   "E",    # pycodestyle
   "F",    # Pyflakes
   "W",    # Warning
   "B",    # flake8-bugbear
   "A",    # flake8-builtins
   "C4",   # flake8-comprehensions
   "T10",  # flake8-debugger
   "EXE",  # flake8-executable,
   "ISC",  # flake8-implicit-str-concat
   "PIE",  # flake8-pie
   "PT",   # flake8-pytest-style
   "RSE",  # flake8-raise
   "RET",  # flake8-return
   "TID",  # flake8-tidy-imports
   "ARG",  # flake8-unused-arguments
   "PGH",  # pygrep-hooks
   "PLC",  # Pylint Convention
   "PLE",  # Pylint Errors
   "PLW",  # Pylint Warnings
]
